# poc_rear

./: .dockerignore  Cargo.toml  Dockerfile  README.md  deploy.yml  docker-compose-app.yml  docker-compose.yml  fly.toml  k8s-deploy.yml  k8s-mongo.yml  spam.zsh
api_lib/: Cargo.toml
api_lib/src/: auth_guard.rs  auth_routes.rs  lib.rs  user_routes.rs  webutil.rs  word_routes.rs
config_lib/: Cargo.toml
config_lib/src/: config.rs  config_env.rs  lib.rs
poc_rear/: Cargo.toml
poc_rear/src/: main.rs
poc_rear_api_lib/: Cargo.toml
poc_rear_api_lib/src/: auth_routes.rs  lib.rs  user_routes.rs  word_routes.rs  wotd_routes.rs
poc_rear_bin/: Cargo.toml
poc_rear_bin/src/: main.rs
poc_rear_config_lib/: Cargo.toml
poc_rear_config_lib/src/: config.rs  config_env.rs
poc_rear_user_lib/: Cargo.toml
poc_rear_wotd_lib/: Cargo.toml
poc_rear_wotd_lib/src/: lib.rs  word_models.rs  word_queue.rs  wotd_models.rs
src/: api_routes.rs  auth_routes.rs  config.rs  config_env.rs  error.rs  main.rs  user_models.rs  user_routes.rs  webutil.rs  wotd_models.rs  wotd_routes.rs
user_lib/: Cargo.toml
user_lib/src/: lib.rs  user_logic.rs  user_models.rs
wotd_lib/: Cargo.toml
wotd_lib/src/: lib.rs  word_logic.rs  word_models.rs
