[package]
name = "api_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
user_lib = { path = "../user_lib", version = "0.1.0" }
wotd_lib = { path = "../wotd_lib", version = "0.1.0" }
config_lib = { path = "../config_lib", version = "0.1.0" }

axum = "0.6.20"
tokio = { version = "1.28.2", features = ["full"] }

http-body = "0.4.5"
http = "0.2.9"

mongodb = "2.6.1"
bson = { version = "2.6.1", features = ["chrono-0_4"] }
chrono = { version = "0.4.26", features = ["serde"] }

serde = { version = "1.0.164", features = ["derive"] }
tokio-stream = "0.1.14"
tracing = "0.1.37"
log = "0.4.19"
anyhow = "1.0.71"
alcoholic_jwt = "4091.0.0"
reqwest = { version = "0.11.20", features = ["json"] }
