[package]
name = "poc_rear_api_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poc_rear_user_lib = { path = "../poc_rear_user_lib", version = "0.1.0" }
poc_rear_wotd_lib = { path = "../poc_rear_wotd_lib", version = "0.1.0" }
poc_rear_config_lib = { path = "../poc_rear_config_lib", version = "0.1.0" }

axum = "0.6.20"
tokio = { version = "1.28.2", features = ["full"] }

http-body = "0.4.5"
http = "0.2.9"

mongodb = "2.6.1"
bson = { version = "2.6.1", features = ["chrono-0_4"] }
chrono = { version = "0.4.26", features = ["serde"] }

serde = { version = "1.0.164", features = ["derive"] }
tokio-stream = "0.1.14"
tracing = "0.1.37"
log = "0.4.19"
anyhow = "1.0.71"

