[package]
name = "poc_rear_config_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poc_rear_wotd_lib = { path = "../poc_rear_wotd_lib", version = "0.1.0" }
poc_rear_user_lib = { path = "../poc_rear_user_lib", version = "0.1.0" }

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "tracing-log"] }
tracing-opentelemetry = "0.19.0"

opentelemetry = { version = "0.19.0", default-features = false, features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.12.0", features = ["tonic"]}
opentelemetry-semantic-conventions = "0.9.0"

dotenv = "0.15.0"
mongodb = "2.6.1"
log = "0.4.19"
