[package]
name = "user_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"

mongodb = "2.6.1"
bson = { version = "2.6.1", features = ["chrono-0_4"] }
chrono = { version = "0.4.26", features = ["serde"] }

serde = { version = "1.0.164", features = ["derive"] }
tracing = "0.1.37"

